# trialq

./: .gitignore  README.md  package-lock.json  package.json  tailwind.config.js
config/: cleaning_data_config.yaml  import_site_config.yaml  missing_page_config.yaml  private.key  project_site_config.yaml  query_detail_config.yaml  support_validation.yaml
src/: App.vue  main.js
src-tauri/: .env  .gitignore  Cargo.toml  diesel.toml  logging.yaml  sqlite3.lib  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/2025-01-09-135111_create_tables/: up.sql
src-tauri/migrations/2025-01-10-065143_initial_tables/: up.sql
src-tauri/migrations/2025-01-11-053514_add_project_report_extend_table/: up.sql
src-tauri/migrations/2025-01-17-020603_report_data/: up.sql
src-tauri/src/: lib.rs  main.rs  schema.rs  utils.rs
src-tauri/src/connections/: db.rs
src-tauri/src/core/: excel_process_engine.rs  log.rs  mod.rs  requirements_checker.rs  websocket.rs
src-tauri/src/core/connections/: db.rs
src-tauri/src/engines/: excel_process_engine.rs  mod.rs
src-tauri/src/licence/: licence_validation.rs  mod.rs
src-tauri/src/models/: mod.rs
src-tauri/src/models/projects/: mod.rs
src-tauri/src/models/projects/project_base/: mod.rs  project_model.rs  project_repository.rs  project_site_model.rs  project_site_repository.rs  schema.rs
src-tauri/src/models/projects/project_report/: mod.rs  model_convert_utils.rs  project_report_data_model.rs  project_report_data_repository.rs  project_report_extend_data_model.rs  project_report_extend_data_repository.rs  project_report_model.rs  project_report_repository.rs  project_report_source_model.rs  project_report_source_repository.rs  schema.rs
src-tauri/src/models/projects/project_report/origin/: missing_page_stats.rs  mod.rs  project_data_clean_progress_model.rs  project_data_clean_progress_repository.rs  project_missing_page_model.rs  project_missing_page_repository.rs  project_query_detail_model.rs  project_query_detail_repository.rs  schema.rs
src-tauri/src/models/tools/: mod.rs  schema.rs  tools_model.rs  tools_repository.rs
src-tauri/src/models/user/: mod.rs  schema.rs  user_model.rs  user_repository.rs  user_task_model.rs  user_task_repository.rs
src-tauri/src/modules/: mod.rs
src-tauri/src/modules/api/: licence_api.rs  mod.rs  project_api.rs  tools_api.rs
src-tauri/src/modules/licence/: licence_service.rs  mod.rs
src-tauri/src/modules/projects/: project_service.rs
src-tauri/src/modules/service/: enums.rs  mod.rs
src-tauri/src/modules/service/projects/: excel_service.rs  mod.rs  project_service.rs  report_detail_service.rs  report_service.rs  site_service.rs  template_service.rs
src-tauri/src/modules/service/tools/: mod.rs  tool_service.rs
src-tauri/src/modules/service/user/: user_service.rs  user_task_service.rs
src-tauri/src/modules/tools/: tool_service.rs
src-tauri/src/modules/user/: user_service.rs
src/assets/: main.css
(+36 files in other folders)
