[package]
name = "TrialQ"
version = "0.0.1-beta"
description = "基于rust的本地离线客户端分析桌面客户端"
authors = ["sivanliaobil@gmail.com"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "trial_q"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.2.1", features = ["devtools"] }
tauri-plugin-dialog = "2" # 添加 dialog 插件
tauri-plugin-opener = "2"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
log = "0.4.22"
tokio = {version = "1.43.0", features = ["full"] }
tokio-tungstenite = "0.26.1"
features = "0.10.0"
tauri-plugin-log = "2"
reqwest = "0.12.12"
regitry-code = { version = "1.0.4", features = ["password", "code-utils"] }
dotenv = "0.15.0"
r2d2 = "0.8.10"
calamine = { version = "0.26.1", features = ["dates"] }
serde_yaml = "0.9.33"
csv = "1.3.1"
mlua = { version = "0.10.2",  features = ["lua54", "vendored"] }
date-formatter = "0.2.1"
strum = "0.24"
strum_macros = "0.24"
lazy_static = "1.5.0"
diesel = { version = "2.2.6", features = ["r2d2", "sqlite", "returning_clauses_for_sqlite_3_35"] }
chrono = "0.4.39"
log4rs = "1.0"
futures-util = "0.3.31"
rayon = "1.10.0"
once_cell="1.20.3"
rust_xlsxwriter="0.79.1"

